6 Index, 6 Delete function, Sweet alert
Index+delete{
-author, pub, book type, subject, sub-subject, book
}

--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -9,4 +9,10 @@
         border: 1px solid blue;
         border-radius: 0px;
     }
+    .line-clamp {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
+     }
  
