Cart page design commit

--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -21,3 +21,10 @@
         overflow: hidden;
      }
  
+
+     .pre-price:after {
+        width: 110%;
+        position: absolute;
+        height: 3px;
+        color: #000;
+     }
