footers position fix and shipping modal incomplete

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1780,3 +1780,10 @@ input.form-control, textarea.form-control, .form-select {
     top: -5px;
     right: -8px;
 }
+
+
+#app {
+    min-height: 110vh;
+    display: flex;
+    flex-direction: column;
+}
