add megamenu column , button and shadow. updated color of megamenu

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1801,3 +1801,16 @@ input.form-control, textarea.form-control, .form-select {
 #home:hover #home-Mega-menu {
     display: block;
 }
+
+
+.megamenu-btn {
+    color: #ffaf00;
+}
+
+.megamenu-btn:hover {
+    color: #fff;
+}
+
+.bg-megamenu {
+    background-color: #fff;
+}
